# exfil_server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: anchore.yml  cargo_test.yml  rust-ci.yml  sbom.yml
src/: config.rs  main.rs
src/logger/: mod.rs
src/server/: mod.rs
