[package]
name = "exfil_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
